@@ -7,6 +7,7 @@ Fixes:
 - format: error handling for HXformat2_aprintf
 - option: do not omit dashes when passthru'ing unknown two-part long opts
 - option: do not omit arg following unknown unknown two-part long opts in pthru
+- option: do run callback on HXTYPE_BOOL
 Enhancements:
 - build: deactivate type-checking of the *_cast() macros for clang due to a
   compiler bug involving nested structs-in-typeofs
